# openapi.yaml
@@ -58,7 +58,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/User"
+              $ref: "#/components/schemas/AdminUser"
         required: true
       responses:
         "200":
@@ -66,7 +66,7 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/User"
+                $ref: "#/components/schemas/AdminUser"
     delete:
       tags:
       - user-controller
@@ -119,3 +119,11 @@ components:
         id:
           type: integer
           format: int64
+    AdminUser:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        adminId:
+          type: string
